# tradingbot

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  README_COMPLETE.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  start.sh  test_import_debug.py  validate_setup.py
.github/workflows/: ci.yml  docs.yml
docs/: gen_ref_pages.py  index.md
docs/api/: overview.md
docs/getting-started/: configuration.md  docker.md  installation.md  quick-start.md
docs/user-guide/: troubleshooting.md
scripts/: run_tests.py  verify-pages-setup.sh
src/tradingbot/: .env.example  main.py
src/tradingbot/config/: __init__.py  asgi.py  constants.py  security.py  settings.py  wsgi.py
src/tradingbot/core/: __init__.py  exceptions.py
src/tradingbot/database/: __init__.py  architecture.md  connection.py  init_database.sql
src/tradingbot/database/sql/: create_triggers.sql  create_views.sql  init_database.sql  readme.md  seeds.sql
src/tradingbot/dependencies/: __init__.py  auth.py
src/tradingbot/docs/: 13-business-logic-eng.md
src/tradingbot/models/: __init__.py  backtest.py  base.py  market.py  strategy.py  trading.py  user.py
src/tradingbot/routers/: __init__.py  auth.py  strategies.py  users.py
src/tradingbot/schemas/: common.py  market.py  strategy.py  trading.py  user.py
src/tradingbot/scripts/: debug_registration.py  quick_start_strategy_demo.py  start_auth_system.sh  test_auth_system.py  test_config.py  test_deployment_cleanup.py  test_strategy_api.py  test_strategy_engine.py
src/tradingbot/services/: advanced_backtest_engine.py  auth_service.py  market_data_service.py  real_market_data_service.py  real_time_strategy_executor.py  strategy_service.py  user_service.py
src/tradingbot/strategies/: __init__.py  base_strategy.py  registry.py
src/tradingbot/strategies/implementations/: __init__.py  bollinger_bands.py  moving_average_crossover.py  multi_indicator.py  rsi_reversal.py
src/tradingbot/strategies/indicators/: __init__.py  technical_indicators.py
src/tradingbot/tests/: test_basic.py
src/tradingbot/tests/integration/: test_api_endpoints.py
src/tradingbot/tests/unit/: test_config.py  test_models_basic.py
src/tradingbot/utils/: datetime_utils.py  dependencies.py
